--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@expo/metro-config": "^0.3.13",
+    "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
